--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-name: "Dactyl"
+name: "Theron Industries"
 permalink: pretty
-author: Theron Studios
-email: hello@theronstudios.com
-url: http://theronstudios.com
+author: Theron Industries
+email: hello@theronindustries.com
+url: http://theronindustries.com
 
 exclude: ["CNAME","editorconfig.txt","Gemfile","Gemfile.lock","README.md", "RAKEFILE"]
 
